Sources/BeanQuerySwift/Generated/BQLParser.swift
// Generated from /Users/yeatse/Developer/Repo/BeanQuerySwift/Sources/BeanQuerySwift/Grammar/BQLParser.g4 by ANTLR 4.13.2
@preconcurrency import Antlr4

internal class BQLParser: Parser {

	internal static let _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = BQLParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(BQLParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	internal
	enum Tokens: Int {
		case EOF = -1, SELECT = 1, DISTINCT = 2, FROM = 3, WHERE = 4, GROUP = 5, 
                 BY = 6, HAVING = 7, ORDER = 8, LIMIT = 9, AS = 10, AND = 11, 
                 OR = 12, NOT = 13, IN = 14, IS = 15, NULL = 16, TRUE = 17, 
                 FALSE = 18, BETWEEN = 19, BALANCES = 20, AT = 21, OPEN = 22, 
                 CLOSE = 23, ON = 24, CLEAR = 25, ANY = 26, ALL = 27, ASC = 28, 
                 DESC = 29, POSITIONAL_PLACEHOLDER = 30, NAMED_PLACEHOLDER_START = 31, 
                 NAMED_PLACEHOLDER_END = 32, NOT_MATCH = 33, MATCHES = 34, 
                 NEQ = 35, LTE = 36, GTE = 37, HASH_TABLE = 38, HASH_EMPTY = 39, 
                 EQ = 40, LT = 41, GT = 42, MATCH = 43, PLUS = 44, MINUS = 45, 
                 STAR = 46, SLASH = 47, PERCENT = 48, DOT = 49, COMMA = 50, 
                 LPAREN = 51, RPAREN = 52, LBRACK = 53, RBRACK = 54, DATE_LITERAL = 55, 
                 DECIMAL = 56, INTEGER = 57, DOUBLE_QUOTED_TEXT = 58, SINGLE_QUOTED_STRING = 59, 
                 IDENTIFIER = 60, BLOCK_COMMENT = 61, LINE_COMMENT = 62, 
                 WS = 63
	}

	internal
	static let RULE_bql = 0, RULE_statement = 1, RULE_selectStmt = 2, RULE_distinctClause = 3, 
            RULE_targets = 4, RULE_asterisk = 5, RULE_target = 6, RULE_fromClause = 7, 
            RULE_subselect = 8, RULE_tableRef = 9, RULE_tableName = 10, 
            RULE_fromExpr = 11, RULE_clearClause = 12, RULE_whereClause = 13, 
            RULE_groupByClause = 14, RULE_groupItem = 15, RULE_orderByClause = 16, 
            RULE_orderItem = 17, RULE_ordering = 18, RULE_limitClause = 19, 
            RULE_balancesStmt = 20, RULE_balancesFromClause = 21, RULE_expression = 22, 
            RULE_disjunction = 23, RULE_conjunction = 24, RULE_inversion = 25, 
            RULE_comparison = 26, RULE_comparisonSuffix = 27, RULE_anyAllOp = 28, 
            RULE_sumExpr = 29, RULE_termExpr = 30, RULE_factorExpr = 31, 
            RULE_unaryExpr = 32, RULE_primaryExpr = 33, RULE_atomExpr = 34, 
            RULE_placeholder = 35, RULE_functionCall = 36, RULE_expressionList = 37, 
            RULE_columnRef = 38, RULE_constant = 39, RULE_literal = 40, 
            RULE_listLiteral = 41, RULE_identifier = 42, RULE_stringLiteral = 43, 
            RULE_booleanLiteral = 44, RULE_nullLiteral = 45, RULE_integerLiteral = 46, 
            RULE_decimalLiteral = 47, RULE_dateLiteral = 48

	internal
	static let ruleNames: [String] = [
		"bql", "statement", "selectStmt", "distinctClause", "targets", "asterisk", 
		"target", "fromClause", "subselect", "tableRef", "tableName", "fromExpr", 
		"clearClause", "whereClause", "groupByClause", "groupItem", "orderByClause", 
		"orderItem", "ordering", "limitClause", "balancesStmt", "balancesFromClause", 
		"expression", "disjunction", "conjunction", "inversion", "comparison", 
		"comparisonSuffix", "anyAllOp", "sumExpr", "termExpr", "factorExpr", "unaryExpr", 
		"primaryExpr", "atomExpr", "placeholder", "functionCall", "expressionList", 
		"columnRef", "constant", "literal", "listLiteral", "identifier", "stringLiteral", 
		"booleanLiteral", "nullLiteral", "integerLiteral", "decimalLiteral", "dateLiteral"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'SELECT'", "'DISTINCT'", "'FROM'", "'WHERE'", "'GROUP'", "'BY'", 
		"'HAVING'", "'ORDER'", "'LIMIT'", "'AS'", "'AND'", "'OR'", "'NOT'", "'IN'", 
		"'IS'", "'NULL'", "'TRUE'", "'FALSE'", "'BETWEEN'", "'BALANCES'", "'AT'", 
		"'OPEN'", "'CLOSE'", "'ON'", "'CLEAR'", "'ANY'", "'ALL'", "'ASC'", "'DESC'", 
		"'%s'", "'%('", "')s'", "'!~'", "'?~'", "'!='", "'<='", "'>='", nil, "'#'", 
		"'='", "'<'", "'>'", "'~'", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", 
		"','", "'('", "')'", "'['", "']'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "SELECT", "DISTINCT", "FROM", "WHERE", "GROUP", "BY", "HAVING", "ORDER", 
		"LIMIT", "AS", "AND", "OR", "NOT", "IN", "IS", "NULL", "TRUE", "FALSE", 
		"BETWEEN", "BALANCES", "AT", "OPEN", "CLOSE", "ON", "CLEAR", "ANY", "ALL", 
		"ASC", "DESC", "POSITIONAL_PLACEHOLDER", "NAMED_PLACEHOLDER_START", "NAMED_PLACEHOLDER_END", 
		"NOT_MATCH", "MATCHES", "NEQ", "LTE", "GTE", "HASH_TABLE", "HASH_EMPTY", 
		"EQ", "LT", "GT", "MATCH", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", 
		"DOT", "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "DATE_LITERAL", 
		"DECIMAL", "INTEGER", "DOUBLE_QUOTED_TEXT", "SINGLE_QUOTED_STRING", "IDENTIFIER", 
		"BLOCK_COMMENT", "LINE_COMMENT", "WS"
	]
	internal
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override internal
	func getGrammarFileName() -> String { return "BQLParser.g4" }

	override internal
	func getRuleNames() -> [String] { return BQLParser.ruleNames }

	override internal
	func getSerializedATN() -> [Int] { return BQLParser._serializedATN }

	override internal
	func getATN() -> ATN { return BQLParser._ATN }


	override internal
	func getVocabulary() -> Vocabulary {
	    return BQLParser.VOCABULARY
	}

	override internal
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,BQLParser._ATN,BQLParser._decisionToDFA, BQLParser._sharedContextCache)
	}


	internal class BqlContext: ParserRuleContext {
			internal
			func statement() -> StatementContext? {
				return getRuleContext(StatementContext.self, 0)
			}
			internal
			func EOF() -> TerminalNode? {
				return getToken(BQLParser.Tokens.EOF.rawValue, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_bql
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitBql(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitBql(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func bql() throws -> BqlContext {
		var _localctx: BqlContext
		_localctx = BqlContext(_ctx, getState())
		try enterRule(_localctx, 0, BQLParser.RULE_bql)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(98)
		 	try statement()
		 	setState(99)
		 	try match(BQLParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class StatementContext: ParserRuleContext {
			internal
			func selectStmt() -> SelectStmtContext? {
				return getRuleContext(SelectStmtContext.self, 0)
			}
			internal
			func balancesStmt() -> BalancesStmtContext? {
				return getRuleContext(BalancesStmtContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_statement
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitStatement(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitStatement(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func statement() throws -> StatementContext {
		var _localctx: StatementContext
		_localctx = StatementContext(_ctx, getState())
		try enterRule(_localctx, 2, BQLParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(103)
		 	try _errHandler.sync(self)
		 	switch (BQLParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .SELECT:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(101)
		 		try selectStmt()

		 		break

		 	case .BALANCES:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(102)
		 		try balancesStmt()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class SelectStmtContext: ParserRuleContext {
			internal
			func SELECT() -> TerminalNode? {
				return getToken(BQLParser.Tokens.SELECT.rawValue, 0)
			}
			internal
			func targets() -> TargetsContext? {
				return getRuleContext(TargetsContext.self, 0)
			}
			internal
			func distinctClause() -> DistinctClauseContext? {
				return getRuleContext(DistinctClauseContext.self, 0)
			}
			internal
			func fromClause() -> FromClauseContext? {
				return getRuleContext(FromClauseContext.self, 0)
			}
			internal
			func whereClause() -> WhereClauseContext? {
				return getRuleContext(WhereClauseContext.self, 0)
			}
			internal
			func groupByClause() -> GroupByClauseContext? {
				return getRuleContext(GroupByClauseContext.self, 0)
			}
			internal
			func orderByClause() -> OrderByClauseContext? {
				return getRuleContext(OrderByClauseContext.self, 0)
			}
			internal
			func limitClause() -> LimitClauseContext? {
				return getRuleContext(LimitClauseContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_selectStmt
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitSelectStmt(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitSelectStmt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func selectStmt() throws -> SelectStmtContext {
		var _localctx: SelectStmtContext
		_localctx = SelectStmtContext(_ctx, getState())
		try enterRule(_localctx, 4, BQLParser.RULE_selectStmt)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(105)
		 	try match(BQLParser.Tokens.SELECT.rawValue)
		 	setState(107)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == BQLParser.Tokens.DISTINCT.rawValue) {
		 		setState(106)
		 		try distinctClause()

		 	}

		 	setState(109)
		 	try targets()
		 	setState(111)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,2,_ctx)) {
		 	case 1:
		 		setState(110)
		 		try fromClause()

		 		break
		 	default: break
		 	}
		 	setState(114)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,3,_ctx)) {
		 	case 1:
		 		setState(113)
		 		try whereClause()

		 		break
		 	default: break
		 	}
		 	setState(117)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,4,_ctx)) {
		 	case 1:
		 		setState(116)
		 		try groupByClause()

		 		break
		 	default: break
		 	}
		 	setState(120)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,5,_ctx)) {
		 	case 1:
		 		setState(119)
		 		try orderByClause()

		 		break
		 	default: break
		 	}
		 	setState(123)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,6,_ctx)) {
		 	case 1:
		 		setState(122)
		 		try limitClause()

		 		break
		 	default: break
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class DistinctClauseContext: ParserRuleContext {
			internal
			func DISTINCT() -> TerminalNode? {
				return getToken(BQLParser.Tokens.DISTINCT.rawValue, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_distinctClause
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitDistinctClause(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitDistinctClause(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func distinctClause() throws -> DistinctClauseContext {
		var _localctx: DistinctClauseContext
		_localctx = DistinctClauseContext(_ctx, getState())
		try enterRule(_localctx, 6, BQLParser.RULE_distinctClause)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(125)
		 	try match(BQLParser.Tokens.DISTINCT.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class TargetsContext: ParserRuleContext {
			internal
			func target() -> [TargetContext] {
				return getRuleContexts(TargetContext.self)
			}
			internal
			func target(_ i: Int) -> TargetContext? {
				return getRuleContext(TargetContext.self, i)
			}
			internal
			func COMMA() -> [TerminalNode] {
				return getTokens(BQLParser.Tokens.COMMA.rawValue)
			}
			internal
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(BQLParser.Tokens.COMMA.rawValue, i)
			}
			internal
			func asterisk() -> AsteriskContext? {
				return getRuleContext(AsteriskContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_targets
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitTargets(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitTargets(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func targets() throws -> TargetsContext {
		var _localctx: TargetsContext
		_localctx = TargetsContext(_ctx, getState())
		try enterRule(_localctx, 8, BQLParser.RULE_targets)
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	setState(136)
		 	try _errHandler.sync(self)
		 	switch (BQLParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .SELECT:fallthrough
		 	case .NOT:fallthrough
		 	case .NULL:fallthrough
		 	case .TRUE:fallthrough
		 	case .FALSE:fallthrough
		 	case .POSITIONAL_PLACEHOLDER:fallthrough
		 	case .NAMED_PLACEHOLDER_START:fallthrough
		 	case .PLUS:fallthrough
		 	case .MINUS:fallthrough
		 	case .LPAREN:fallthrough
		 	case .DATE_LITERAL:fallthrough
		 	case .DECIMAL:fallthrough
		 	case .INTEGER:fallthrough
		 	case .DOUBLE_QUOTED_TEXT:fallthrough
		 	case .SINGLE_QUOTED_STRING:fallthrough
		 	case .IDENTIFIER:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(127)
		 		try target()
		 		setState(132)
		 		try _errHandler.sync(self)
		 		_alt = try getInterpreter().adaptivePredict(_input,7,_ctx)
		 		while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
		 			if ( _alt==1 ) {
		 				setState(128)
		 				try match(BQLParser.Tokens.COMMA.rawValue)
		 				setState(129)
		 				try target()

		 		 
		 			}
		 			setState(134)
		 			try _errHandler.sync(self)
		 			_alt = try getInterpreter().adaptivePredict(_input,7,_ctx)
		 		}

		 		break

		 	case .STAR:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(135)
		 		try asterisk()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class AsteriskContext: ParserRuleContext {
			internal
			func STAR() -> TerminalNode? {
				return getToken(BQLParser.Tokens.STAR.rawValue, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_asterisk
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitAsterisk(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitAsterisk(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func asterisk() throws -> AsteriskContext {
		var _localctx: AsteriskContext
		_localctx = AsteriskContext(_ctx, getState())
		try enterRule(_localctx, 10, BQLParser.RULE_asterisk)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(138)
		 	try match(BQLParser.Tokens.STAR.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class TargetContext: ParserRuleContext {
			internal
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			internal
			func AS() -> TerminalNode? {
				return getToken(BQLParser.Tokens.AS.rawValue, 0)
			}
			internal
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_target
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitTarget(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitTarget(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func target() throws -> TargetContext {
		var _localctx: TargetContext
		_localctx = TargetContext(_ctx, getState())
		try enterRule(_localctx, 12, BQLParser.RULE_target)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(140)
		 	try expression()
		 	setState(143)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,9,_ctx)) {
		 	case 1:
		 		setState(141)
		 		try match(BQLParser.Tokens.AS.rawValue)
		 		setState(142)
		 		try identifier()

		 		break
		 	default: break
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class FromClauseContext: ParserRuleContext {
			internal
			func FROM() -> TerminalNode? {
				return getToken(BQLParser.Tokens.FROM.rawValue, 0)
			}
			internal
			func tableRef() -> TableRefContext? {
				return getRuleContext(TableRefContext.self, 0)
			}
			internal
			func subselect() -> SubselectContext? {
				return getRuleContext(SubselectContext.self, 0)
			}
			internal
			func fromExpr() -> FromExprContext? {
				return getRuleContext(FromExprContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_fromClause
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitFromClause(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitFromClause(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func fromClause() throws -> FromClauseContext {
		var _localctx: FromClauseContext
		_localctx = FromClauseContext(_ctx, getState())
		try enterRule(_localctx, 14, BQLParser.RULE_fromClause)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(145)
		 	try match(BQLParser.Tokens.FROM.rawValue)
		 	setState(149)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,10, _ctx)) {
		 	case 1:
		 		setState(146)
		 		try tableRef()

		 		break
		 	case 2:
		 		setState(147)
		 		try subselect()

		 		break
		 	case 3:
		 		setState(148)
		 		try fromExpr()

		 		break
		 	default: break
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class SubselectContext: ParserRuleContext {
			internal
			func LPAREN() -> TerminalNode? {
				return getToken(BQLParser.Tokens.LPAREN.rawValue, 0)
			}
			internal
			func selectStmt() -> SelectStmtContext? {
				return getRuleContext(SelectStmtContext.self, 0)
			}
			internal
			func RPAREN() -> TerminalNode? {
				return getToken(BQLParser.Tokens.RPAREN.rawValue, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_subselect
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitSubselect(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitSubselect(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func subselect() throws -> SubselectContext {
		var _localctx: SubselectContext
		_localctx = SubselectContext(_ctx, getState())
		try enterRule(_localctx, 16, BQLParser.RULE_subselect)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(151)
		 	try match(BQLParser.Tokens.LPAREN.rawValue)
		 	setState(152)
		 	try selectStmt()
		 	setState(153)
		 	try match(BQLParser.Tokens.RPAREN.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class TableRefContext: ParserRuleContext {
			internal
			func tableName() -> TableNameContext? {
				return getRuleContext(TableNameContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_tableRef
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitTableRef(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitTableRef(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func tableRef() throws -> TableRefContext {
		var _localctx: TableRefContext
		_localctx = TableRefContext(_ctx, getState())
		try enterRule(_localctx, 18, BQLParser.RULE_tableRef)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(155)
		 	try tableName()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	internal class TableNameContext: ParserRuleContext {
			internal
			func HASH_TABLE() -> TerminalNode? {
				return getToken(BQLParser.Tokens.HASH_TABLE.rawValue, 0)
			}
			internal
			func HASH_EMPTY() -> TerminalNode? {
				return getToken(BQLParser.Tokens.HASH_EMPTY.rawValue, 0)
			}
			internal
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
		override internal
		func getRuleIndex() -> Int {
			return BQLParser.RULE_tableName
		}
		override internal
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BQLParserVisitor {
			    return visitor.visitTableName(self)
			}
			else if let visitor = visitor as? BQLParserBaseVisitor {
			    return visitor.visitTableName(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 internal func tableName() throws -> TableNameContext {
		var _localctx: TableNameContext
		_localctx = TableNameContext(_ctx, getState())
		try enterRule(_localctx, 20, BQLParser.RULE_tableName)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(160)
		 	try _errHandler.sync(self)
		 	switch (BQLParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .HASH_TABLE:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(157)
		 		try match(BQLParser.Tokens.HASH_TABLE.rawValue)

		 		break

		 	case .HASH_EMPTY:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(158)
		 		try match(BQLParser.Tokens.HASH_EMPTY.rawValue)

		 		break
		 	case .DOUBLE_QUOTED_TEXT:fallthrough
		 	case .IDENTIFIER:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(159)
		 		try identifier()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
